--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Baskervville", serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 :root {
@@ -8,13 +9,52 @@
   --hr-color: #a9c5de;
 }
 
+h1,h2,h3 {
+  font-weight: 200;
+}
+
+h1 {
+  margin: 35px auto 0 auto;
+  text-align: center;
+  width: 50%;
+}
+
+.title {
+  font-size: 30px;
+  color: var(--intro-color);
+}
+
+.nav {
+  padding: 25px 10%;
+  /*background: red;*/
+  /*height: 25px;*/
+  margin: 30px 0 80px 0;
+}
+
+.buttons {
+  float: right;
+}
+
+.buttons button {
+  border: none;
+  background: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 17px;
+  padding-top: 5px;
+}
+
+.buttons button:hover {
+  color: var(--intro-color);
+  text-decoration: underline;
+}
+
 .section {
   margin: 50px 20px;
-  border-radius: 2px;
 }
 
 .section.intro {
-  margin-top: 15%;
+  margin-top: 17%;
   background-image: linear-gradient(
     to bottom left,
     var(--intro-color),
@@ -24,7 +64,7 @@
 
 .section.colour-studio {
   /* how could you get around this */
-  background-image: linear-gradient(to bottom left, var(--cs-color), #e3bbbb);
+  background-image: linear-gradient(to bottom left, var(--cs-color), #ffe0c6);
 }
 
 .section.hack-reactor {
@@ -39,9 +79,13 @@
   padding: 50px 0;
 }
 
+.intro .content {
+  width: 70%;
+}
+
 .main-content {
-  font-size: 22px;
-  line-height: 35px;
+  font-size: 25px;
+  line-height: 40px;
   padding: 0 40px;
   margin: 40px 0;
   color: white;
@@ -49,10 +93,6 @@
 
 .apps .main-content {
   color: black;
-}
-
-.intro .main-content {
-  padding: 0;
 }
 
 img {
@@ -97,7 +137,7 @@ img {
 }
 
 .job-header h2 {
-  font-size: 30px;
+  font-size: 33px;
   margin-bottom: 5px;
   filter: brightness(30%) saturate(300%);
 }
