--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+@keyframes float {
+  from {
+    top: -8px;
+  }
+  50% {
+    top: 8px;
+  }
+  to {
+    top: -8px;
+  }
+}
+
 * {
   font-family: "Baskervville", serif;
   -webkit-font-smoothing: antialiased;
@@ -9,7 +21,9 @@
   --hr-color: #a9c5de;
 }
 
-h1,h2,h3 {
+h1,
+h2,
+h3 {
   font-weight: 200;
 }
 
@@ -168,6 +182,12 @@ img {
   display: inline-block;
   transition: all 300ms ease;
   position: relative;
+}
+
+.float {
+  animation-name: float;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
 }
 
 .app-box:hover {
