--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,10 @@ h1 {
   background-image: linear-gradient(to bottom left, var(--hr-color), #e3bbbb);
 }
 
+.section.rtw {
+  margin-bottom: 70px;
+}
+
 .content {
   margin: 0 auto;
   width: 75%;
@@ -105,7 +109,8 @@ h1 {
   color: white;
 }
 
-.apps .main-content {
+.apps .main-content,
+.rtw .main-content {
   color: black;
 }
 
