--- a/styles.css
+++ b/styles.css
@@ -50,16 +50,19 @@ h1 {
   float: right;
 }
 
-.buttons button {
+.buttons a {
   border: none;
   background: none;
   outline: none;
   cursor: pointer;
   font-size: 17px;
   padding-top: 5px;
+  margin: 0 10px;
+  color: black;
+  text-decoration: none;
 }
 
-.buttons button:hover {
+.buttons a:hover {
   color: var(--intro-color);
   text-decoration: underline;
 }
